--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+blog:
+    resource: "@BlogBundle/Resources/config/routing.yml"
+    prefix:   /
