--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ contact:
 logbook:
     path:     /logbook
     defaults: { _controller: BlogBundle:Main:logbook }
+
+blog_logbook:
+    resource: "@BlogBundle/Resources/config/routing/logbook.yml"
+    prefix:   /logbook
