Add icone for basic navbar. Rename contact elements to profile

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,11 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        site_name: "Time2Dev"
+        twitter: "alex_fradet"
+        github: "Fradou"
+        linkedin: "alexandrefradet"
 
 # Doctrine Configuration
 doctrine:
