--- a/src/BlogBundle/Resources/config/routing/main.yml
+++ b/src/BlogBundle/Resources/config/routing/main.yml
@@ -13,3 +13,7 @@ profile:
 logbook:
     path:     /logbook
     defaults: { _controller: BlogBundle:Main:logbook }
+
+settings:
+    path:     /settings
+    defaults: { _controller: BlogBundle:Main:settings }
