--- a/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
@@ -18,4 +18,6 @@ BlogBundle\Entity\Article:
             type: string
             length: 255
             nullable: true
+        visible:
+            type: boolean
     lifecycleCallbacks: {  }
