--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,7 +37,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     globals:
-        site_name: "Time2Dev"
+        site_name: "My cul is chicken"
         twitter: "alex_fradet"
         github: "Fradou"
         linkedin: "alexandrefradet"
