Add a datetime field in logbook. Allow me to display them in chronological order. I'll probably also add the dates somewhere in the logbook

--- a/src/BlogBundle/Resources/config/doctrine/Logbook.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Logbook.orm.yml
@@ -9,6 +9,12 @@ BlogBundle\Entity\Logbook:
             generator:
                 strategy: AUTO
     fields:
+        date:
+          nullable: true
+          type: date
+          gedmo:
+            timestampable:
+              on: create
         title:
             type: string
             length: 255
