Finish the Contact pannel for frontpage. Create a small jq script to display mail on click. Change some routing and anchor. Reorder javascript to have no issue on loading (had jq loading last, not cool). Add some styling.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,7 @@ twig:
         twitter: "alex_fradet"
         github: "Fradou"
         linkedin: "alexandrefradet"
+        mail: "alex.fradet.1@gmail.com"
 
 # Doctrine Configuration
 doctrine:
