--- a/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
@@ -13,4 +13,9 @@ BlogBundle\Entity\Category:
             type: string
             length: 255
             unique: true
+
+    manyToMany:
+        articles:
+          targetEntity: Article
+          mappedBy: categories
     lifecycleCallbacks: {  }
