--- a/src/BlogBundle/Resources/config/routing/category.yml
+++ b/src/BlogBundle/Resources/config/routing/category.yml
@@ -8,5 +8,17 @@ category_show:
     defaults: { _controller: "BlogBundle:Category:show" }
     methods:  GET
 
+category_new:
+    path:     /new
+    defaults: { _controller: "BlogBundle:Category:new" }
+    methods:  [GET, POST]
 
+category_edit:
+    path:     /{id}/edit
+    defaults: { _controller: "BlogBundle:Category:edit" }
+    methods:  [GET, POST]
 
+category_delete:
+    path:     /{id}/delete
+    defaults: { _controller: "BlogBundle:Category:delete" }
+    methods:  DELETE
