--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,4 +73,9 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: BlogBundle\Entity\User
+
 
