--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "symfony/twig-bridge": "^3.1",
-        "javiereguiluz/easyadmin-bundle": "^1.16"
+        "javiereguiluz/easyadmin-bundle": "^1.16",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
