Create both comments entities

--- a/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
@@ -21,6 +21,11 @@ BlogBundle\Entity\Article:
         visible:
             type: boolean
 
+    oneToMany:
+        comments:
+            targetEntity: Comment
+            mappedBy: Article
+
     manyToMany:
         categories:
             targetEntity: Category
