--- a/app/config/config_easy.yml
+++ b/app/config/config_easy.yml
@@ -42,6 +42,24 @@ easy_admin:
                     - { property: 'title'}
                     - { property: 'content', label: 'Contenu du post', type: 'raw' }
                     - { property: 'img', type: 'image'}
+        Comment:
+            class: BlogBundle\Entity\Comment
+            label: 'Comm blog'
+            list:
+                fields:
+                    - 'id'
+                    - { property: 'subject'}
+                    - { property: 'content'}
+
+        Logcom:
+            class: BlogBundle\Entity\Logcom
+            label: 'Comm logbook'
+            list:
+                fields:
+                    - 'id'
+                    - { property: 'subject'}
+                    - { property: 'content'}
+
 
 
     # Pour la page search, determine les champs ou faire la recherche
@@ -57,6 +75,8 @@ easy_admin:
             - Category
             - Logbook
             - Content
+            - Comment
+            - Logcom
             - { label: 'Retour au site'}
             - { label: 'Accueil', route: 'index' }
             - { label: 'Log', route: 'logbook' }
