--- a/src/BlogBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/User.orm.yml
@@ -6,3 +6,11 @@ BlogBundle\Entity\User:
             type: integer
             generator:
                 strategy: AUTO
+    oneToMany:
+        logcoms:
+            targetEntity: Logcom
+            mappedBy: user
+
+        comments:
+            targetEntity: Comment
+            mappedBy: user
