--- a/src/BlogBundle/Resources/config/doctrine/Comment.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Comment.orm.yml
@@ -14,12 +14,21 @@ BlogBundle\Entity\Comment:
             length: 255
         content:
             type: text
+        visible:
+            type: boolean
+
     manyToOne:
         article:
             targetEntity: Article
             inversedBy: comments
             joinColumn:
                 name: article_id
+                referencedColumnName: id
+        user:
+            targetEntity: User
+            inversedBy: comments
+            joinColumn:
+                name: user_id
                 referencedColumnName: id
 
     lifecycleCallbacks: {  }
