Create entities for comments on blog and logbook. Create crud too. Update easy config to display them in back. Add a comment section in logbook view, only displaying for now, can't write yet.

--- a/app/config/config_easy.yml
+++ b/app/config/config_easy.yml
@@ -50,6 +50,7 @@ easy_admin:
                     - 'id'
                     - { property: 'subject'}
                     - { property: 'content'}
+                    - { property: 'visible', label: "Visible" }
 
         Logcom:
             class: BlogBundle\Entity\Logcom
@@ -59,6 +60,7 @@ easy_admin:
                     - 'id'
                     - { property: 'subject'}
                     - { property: 'content'}
+                    - { property: 'visible', label: "Visible" }
 
 
 
