Install FOSRest Bundle to test and see how it can help to setup API on website. Change config to enable serializer.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,10 @@ framework:
     fragments:       ~
     http_method_override: true
 
+  # Activate serializer for FOSRest
+    serializer:
+        enabled: true
+
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
