Working on my onepage presentation. Start all over on a new page to get bits from others. Add a download link for my cv. Add a navbar.

--- a/src/BlogBundle/Resources/config/routing/main.yml
+++ b/src/BlogBundle/Resources/config/routing/main.yml
@@ -10,6 +10,10 @@ settings:
     path:     /settings
     defaults: { _controller: BlogBundle:Main:settings }
 
+resume:
+    path:     /resume
+    defaults: { _controller: BlogBundle:Main:resume }
+
 project:
     path:     /project
     defaults: { _controller: BlogBundle:Main:project }
