--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -2,15 +2,15 @@ blog_main:
     resource: "@BlogBundle/Resources/config/routing/main.yml"
     prefix:   /
 
-blog_logbook:
-    resource: "@BlogBundle/Resources/config/routing/logbook.yml"
-    prefix:   /logbook
+# blog_logbook:
+ #   resource: "@BlogBundle/Resources/config/routing/logbook.yml"
+  #  prefix:   /logbook
 
-blog_category:
-    resource: "@BlogBundle/Resources/config/routing/category.yml"
-    prefix:   /category
+# blog_category:
+ #   resource: "@BlogBundle/Resources/config/routing/category.yml"
+  #  prefix:   /category
 
-blog_logcom:
-        resource: "@BlogBundle/Resources/config/routing/logcom.yml"
-        prefix:   /logcom
+# blog_logcom:
+ #       resource: "@BlogBundle/Resources/config/routing/logcom.yml"
+  #      prefix:   /logcom
 
