Enable resume routing and link it from index

--- a/src/BlogBundle/Resources/config/routing/main.yml
+++ b/src/BlogBundle/Resources/config/routing/main.yml
@@ -10,9 +10,9 @@ index:
   #  path:     /settings
    # defaults: { _controller: BlogBundle:Main:settings }
 
-#resume:
- #   path:     /resume
-  #  defaults: { _controller: BlogBundle:Main:resume }
+resume:
+    path:     /resume
+    defaults: { _controller: BlogBundle:Main:resume }
 
 # project:
   #  path:     /project
