--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-imagemin": "^3.1.1",
     "gulp-jsmin": "^0.1.5"
   }
 }
