--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/Fradou/Blog_SymfonyDev#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-imagemin": "^3.1.1",
-    "gulp-jsmin": "^0.1.5"
+    "gulp-jsmin": "^0.1.5",
+    "gulp-uglify": "^2.0.0"
   }
 }
