Last style update. Disable CV link as file isn't ready yet

--- a/src/BlogBundle/Resources/config/routing/main.yml
+++ b/src/BlogBundle/Resources/config/routing/main.yml
@@ -11,7 +11,7 @@ index:
    # defaults: { _controller: BlogBundle:Main:settings }
 
 resume:
-    path:     /resume
+    path:     /CV
     defaults: { _controller: BlogBundle:Main:resume }
 
 # project:
