--- a/src/BlogBundle/Resources/config/doctrine/Content.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Content.orm.yml
@@ -12,12 +12,17 @@ BlogBundle\Entity\Content:
         title:
             type: string
             length: 255
+        subtitle:
+            type: string
+            length: 255
+            nullable: true
         category:
             type: string
             length: 255
             nullable: true
         content:
             type: text
+            nullable: true
         other:
             type: string
             length: 255
@@ -26,4 +31,10 @@ BlogBundle\Entity\Content:
             type: string
             length: 255
             nullable: true
+        url:
+            type: string
+            length: 255
+            nullable: true
+        visible:
+            type: boolean
     lifecycleCallbacks: {  }
