--- a/src/BlogBundle/Resources/config/routing/main.yml
+++ b/src/BlogBundle/Resources/config/routing/main.yml
@@ -14,6 +14,10 @@ resume:
     path:     /CV
     defaults: { _controller: BlogBundle:Main:resume }
 
+resume2:
+    path:     /CV2
+    defaults: { _controller: BlogBundle:Main:resume2 }
+
 project:
     path:     /project
     defaults: { _controller: BlogBundle:Main:project }
