--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -1,8 +1,7 @@
-blog_main:
+site_main:
     resource: "@BlogBundle/Resources/config/routing/main.yml"
     prefix:   /
 
-blog_category:
-    resource: "@BlogBundle/Resources/config/routing/category.yml"
-    prefix:   /category
-
+blog_main:
+    resource: "@BlogBundle/Resources/config/routing/blog.yml"
+    prefix:   /blog
