Updating query and controller to display blog index

--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -5,3 +5,9 @@ site_main:
 blog_main:
     resource: "@BlogBundle/Resources/config/routing/blog.yml"
     prefix:   /blog
+
+blog_article:
+    resource: "@BlogBundle/Resources/config/routing/article.yml"
+    prefix:   /article
+
+
