Update package with composer. Looks like i inadvertently index2 from a twig template while deleting mine. Thx phpstorm. Can edit article in easyadmin now, still got one issue between category and article

--- a/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Article.orm.yml
@@ -24,7 +24,7 @@ BlogBundle\Entity\Article:
     oneToMany:
         comments:
             targetEntity: Comment
-            mappedBy: Article
+            mappedBy: article
 
     manyToMany:
         categories:
