Update query for articles so that it works without category parameter. Update view. Create button and ajax query to sort article by category

--- a/src/BlogBundle/Resources/config/routing/blog.yml
+++ b/src/BlogBundle/Resources/config/routing/blog.yml
@@ -7,3 +7,8 @@ blog_article:
     path:     /blog_article
     defaults: { _controller: BlogBundle:Blog:article }
     methods:  GET
+
+blog_tagindex:
+    path:     /tagindex/{tag}
+    defaults: { _controller: BlogBundle:Blog:tagindex }
+    methods: [POST, GET]
