Update ajax script, twig view and controller for optionnal image display and upating content with button.

--- a/app/config/config_easy.yml
+++ b/app/config/config_easy.yml
@@ -15,7 +15,7 @@ easy_admin:
                 fields:
                     - 'id'
                     - { property: 'title', label: 'Titre' }
-                    - { property: 'img', label: 'Adresse image', type: 'image', base_path: '' }
+                    - { property: 'img', label: 'Adresse image', type: 'image', base_path: 'img/' }
                     - { property: 'content', label: "Contenu" }
                     - { property: 'visible', label: "Visible" }
                     - { property: 'categories', label: "Categories associées" }
