--- a/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
@@ -18,4 +18,7 @@ BlogBundle\Entity\Category:
         articles:
           targetEntity: Article
           mappedBy: categories
+        content:
+            targetEntity: BlogBundle\Entity\Content
+            mappedBy: categories
     lifecycleCallbacks: {  }
