Solve issue existing with entities/mapping

--- a/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Category.orm.yml
@@ -18,7 +18,7 @@ BlogBundle\Entity\Category:
         articles:
           targetEntity: Article
           mappedBy: categories
-        content:
+        contents:
             targetEntity: BlogBundle\Entity\Content
             mappedBy: categories
     lifecycleCallbacks: {  }
