Add skill ordring and random color display. Add IDE files to gitignore and cleanup.

--- a/src/BlogBundle/Resources/config/doctrine/Skill.orm.yml
+++ b/src/BlogBundle/Resources/config/doctrine/Skill.orm.yml
@@ -15,7 +15,7 @@ BlogBundle\Entity\Skill:
             unique: true
         priority:
             type: integer
-            nullable: true
+            nullable: false
         display:
             type: boolean
     oneToMany:
