Remove CV from src files to avoid issue with git merging, add CV name in parameter

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,7 @@ twig:
         github: "Fradou"
         linkedin: "alexandrefradet"
         mail: "alex.fradet.1@gmail.com"
+        resume_pdf_name: "%resume_pdf_name%"
 
 # Doctrine Configuration
 doctrine:
