Update gitignore and add gitkeep to keep tree

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,4 +17,4 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
-    resume_pdf_name:    CV_Alexandre_FRADET.pdf
+    resume_pdf_name:    CV.pdf
